[package]
name = "envoy-wasm-filter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
proxy-wasm = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-arg=--export=_start",
  "-C", "link-arg=--export=proxy_on_vm_start",
  "-C", "link-arg=--export=proxy_on_context_create",
  "-C", "link-arg=--export=proxy_on_configure",
  "-C", "link-arg=--export=proxy_on_request_headers",
  "-C", "link-arg=--export=proxy_on_response_headers",
  "-C", "link-arg=--export=proxy_on_response_body",
  "-C", "link-arg=--export=proxy_on_log",
]